Contrast Ratio fixes and Carousel fix

--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,13 @@ body
 }
 .navbar-static-top
 {
-	background:#393;
-	opacity: .75;
+	background: rgba(34, 136, 0, 1);
+    border: 0;
+    margin-bottom: 0;
 }
 .navbar-inverse .navbar-nav>li>a, .navbar-inverse .navbar-brand
 {
 	color:#FFF;
-	text-shadow: 0 1px 2px rgba(0,0,0,.6);
 }
 .navbar-inverse .navbar-nav>li>a:hover, .navbar-inverse .navbar-brand:hover
 {
@@ -37,17 +37,17 @@ body
 }
 .btn-primary
 {
-	background-color:#393;
+	background-color: rgba(34, 136, 0, 1);
 	box-shadow: 0 1px 2px rgba(0,0,0,.6);
 	border:1px solid #282;
 }
 .btn-primary:hover
 {
-	background-color:#282;
+	background-color: #282;
 }
 .btn-primary a
 {
-		text-shadow: 0 1px 2px rgba(0,0,0,.6);
+	text-shadow: 0 1px 2px rgba(0,0,0,.6);
 }
 ul.faq
 {
@@ -106,9 +106,9 @@ a { color: #4B58A6; }
 
 #map_canvas { min-height: 400px; }
 
-.filter-box { 
-  height: 15px; 
-  width: 15px;  
+.filter-box {
+  height: 15px;
+  width: 15px;
   display: inline-block;
   *border-right-width: 2px;
   *border-bottom-width: 2px;
@@ -117,7 +117,7 @@ a { color: #4B58A6; }
           border-radius: 5px;
   -webkit-background-clip: padding-box;
      -moz-background-clip: padding;
-          background-clip: padding-box; 
+          background-clip: padding-box;
 }
 
 .filter-yellow { background-color: #FBF358; }
@@ -132,8 +132,8 @@ canvas {-ms-touch-action: double-tap-zoom;}
 .popup-marker-data p { margin-bottom: 5px; }
 .popup-marker-data hr { margin: 5px 0 5px 0; }
 .popup-marker-data .dl-horizontal { margin-top: 5px; }
-.popup-marker-data dt { width: 105px; }	
-.popup-marker-data dd { margin-left: 115px; }	
+.popup-marker-data dt { width: 105px; }
+.popup-marker-data dd { margin-left: 115px; }
 
 .dl-horizontal dt {
 float: left;
